# ray-tracing-ground-up

./: Cargo.toml
src/: constants.rs  main.rs  ray_tracer_window.rs
src/geometric_objects/: geometric_object.rs  mod.rs  plane.rs  sphere.rs
src/tracers/: mod.rs  multiple_objects.rs  single_sphere.rs  sinusoid.rs  tracer.rs
src/utilities/: mod.rs  ray.rs  rgb_color.rs  shade_rec.rs
src/world/: mod.rs  view_plane.rs  world.rs
