[package]
name = "ray-tracing-ground-up"
authors = ["Eric Buitrón López"]
version = "0.1.0"
edition = "2021"
repository = "https://github.com/EricBL3/ray-tracing-ground-up"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
sdl2 = '0.36'
nalgebra = '*'